Webscraping for MVP tracking
Created a table on the Stats page that tracks the current MVP race.

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 MONGO_URL = mongodb+srv://statsanity:C0u2OTqcaVmcHcm0@cluster1.ozp8aek.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+
+JWT_SECRET = smellybussy35234
