--- a/client/statsanity/package.json
+++ b/client/statsanity/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
+    "http-proxy-middleware": "^2.0.6",
+    "node-html-parser": "^6.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
